# trendstorm

./: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  Makefile  README.md  coverage.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: dashboard-ci.yml  sdk-release.yml
docker/: Dockerfile.dashboard  analyst.Dockerfile  api.Dockerfile  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.obs.yml  docker-compose.yml  knowledge.Dockerfile  memory_consolidation.Dockerfile  outbox_relay.Dockerfile  production_eval.Dockerfile  publisher.Dockerfile  scout.Dockerfile  sse_coordinator.Dockerfile  worker.Dockerfile
docker/config/: loki-config.yaml  otel-collector.yaml  prometheus-alerts.yml  prometheus.yml
docker/config/grafana/dashboards/: dashboards.yaml  trendstorm-overview.json
docker/config/grafana/datasources/: datasources.yaml
docs/: dev-environment.md  trendstorm_ai_full_guide_hebrew.html
docs/adr/: 001-single-region-deployment.md
docs/api-examples/: 01-create-category.http  02-add-sources.http  03-create-job.http  04-stream-job.http
docs/architecture-history/: phase-01-architecture.md  phase-02-local-infra.md  phase-03-fastapi-skeleton.md  phase-04-langgraph-orchestration.md  phase-05-mongodb-schema.md  phase-06-scout-agent.md  phase-07-knowledge-agent.md  phase-08-hybrid-retrieval-analyst.md  phase-09-streaming-publisher.md  phase-10-observability.md  phase-11-evaluation.md  phase-12-production-readiness.md  phase-13-security-hardening.md  phase-13_5-hitl.md  phase-14-sdk.md  phase-15_5-long-term-memory.md  phase-15_6-consolidation.md  phase-15a-dashboard.md  phase-16-self-service-auth.md
eval/golden/: README.md
eval/golden/adversarial/: README.md  exfiltration.json  ignore_prior.json  instruction_injection.json  role_reassignment.json  ssrf_in_html.json
eval/golden/ai_governance/: README.md  example.json
eval/golden/ai_safety_rlhf/: README.md  example.json
eval/golden/llm_interpretability/: README.md  example.json
helm/dashboard/: Chart.yaml  values.yaml
helm/dashboard/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
helm/trendstorm/: Chart.yaml  values-production.yaml  values.yaml
helm/trendstorm/templates/: _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-rollout.yaml  api-service.yaml  externalsecret.yaml  ingress.yaml  serviceaccount.yaml  workers.yaml
k8s/: network-policies.yaml  secret-store.yaml
ops/: slo.yml
ops/runbooks/: README.md  analyst-latency.md  api-latency.md  auth-incident.md  chromadb-health.md  cost-overrun.md  disaster-recovery.md  dlq-spike.md  email-deliverability.md  eval-regression.md  kafka-lag.md  llm-rate-limit.md  mongo-pool.md  production-eval-flag.md  publisher-latency.md  review-aging.md  security-incident.md
ops/security/: global-blocklist.txt  pentest-phase13.md
scripts/: backfill_memories.py  generate_api_key.py  healthcheck.py  run_eval.py  seed_mongo_indexes.py  smoke_test.py
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/docs/: mkdocs.yml
sdk/python/docs/docs/: api-reference.md  authentication.md  error-handling.md  hitl.md  index.md  quickstart.md  streaming.md
sdk/python/examples/: cost_dashboard.py  hitl_reviewer.py  quickstart.py
sdk/python/src/trendstorm_sdk/: __init__.py  _auth.py  _client.py  _errors.py  _retry.py  _sse.py  _sync.py
sdk/python/src/trendstorm_sdk/resources/: __init__.py  _base.py  api_keys.py  categories.py  jobs.py  memories.py  quota.py  reviews.py  sources.py
sdk/python/tests/integration/: conftest.py  test_categories.py  test_jobs.py
sdk/python/tests/unit/: conftest.py  test_auth.py  test_client.py  test_errors.py  test_retry.py  test_sse.py
src/trendstorm/: __init__.py
src/trendstorm/agents/: stages.py  state.py
src/trendstorm/agents/knowledge/: __init__.py  chunker.py  pipeline.py  tokenizer.py
src/trendstorm/agents/orchestrator/: edges.py  (+3 more)
src/trendstorm/api/: deps.py  error_handlers.py  main.py
src/trendstorm/orchestration/: events.py  topics.py
src/trendstorm/services/: category_service.py  job_service.py  source_service.py
src/trendstorm/utils/: headers_docs.py
tests/: conftest.py
tests/integration/: test_analyst_e2e.py  test_anthropic_chat.py  test_api_smoke.py  test_chroma_store.py  test_cohere_reranker.py  test_eval_runner.py  test_full_pipeline_with_sse.py  test_gemini_chat.py  test_gemini_embedder.py  test_hybrid_retriever.py  test_knowledge_e2e.py  test_knowledge_pipeline.py  test_mongo_bm25.py  test_ollama_embedder.py  test_openai_chat.py  test_openai_embedder.py  test_orchestrator_flow.py  test_outbox_relay.py  test_production_eval_worker.py  test_publisher_e2e.py  test_repositories.py  test_scout_e2e.py  test_security_defenses.py  test_sse_endpoint.py
tests/unit/: test_account_deletion_service.py  test_analysis_prompts.py  test_analyst.py  test_analyst_worker.py  test_anthropic_chat.py  test_auth.py  test_billing.py  test_blob_uri.py  test_business_spans.py  test_categories.py  test_chroma_store.py  test_chroma_vector_retriever.py  test_chunker.py  test_citation_evaluator.py  test_cohere_reranker.py  test_config.py  test_cost_recording.py  test_edges.py  test_email_verification_service.py  test_errors.py  test_events.py  test_gemini_chat.py  test_gemini_embedder.py  test_hashing.py  test_hitl.py  test_hybrid_retriever.py  test_ids.py  test_indexes.py  test_invitation_service.py  test_knowledge_pipeline.py  test_llm_domain.py  test_llm_registry.py  test_llm_retry.py  test_memory_models.py  test_memory_services.py  test_metrics_registry.py  test_ollama_embedder.py  test_openai_chat.py  test_openai_embedder.py  test_orchestrator_analysis_handler.py  (+29 more)
web/dashboard/: .env.example  README.md  index.html  nginx.local.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
web/dashboard/public/: config.json.example
web/dashboard/scripts/: codegen.ts
web/dashboard/src/: App.tsx  env.d.ts  index.css  main.tsx
web/dashboard/tests/: setup.ts
(+292 files in other folders)
