[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trendstorm"
version = "0.1.0"
description = "Python SDK for TrendStorm AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["trendstorm", "ai", "trends", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "trendstorm-shared>=0.1.0",
]

[project.optional-dependencies]
sync = []  # sync wrapper uses asyncio.run(); no extra deps required
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trendstorm_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: pure unit tests — no network I/O",
    "integration: requires a live TrendStorm API (set TRENDSTORM_BASE_URL)",
    "staging: requires staging environment; runs only on main-branch CI",
]

[tool.uv.sources]
trendstorm-shared = { path = "../../packages/trendstorm-shared", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"
